scripts/nullaway/annotator/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8.txt
../annotator/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java:101: error: Nullable is not a repeatable annotation type
        @Nullable @Nullable @SuppressWarnings("unchecked") //we register only InteractionStrategy<? extends FO, ? extends FO>
                  ^
1 error
